src/renderer/snapshots/thndrs__renderer__live__tests__prompt_cjk.snap
---
source: src/renderer/live.rs
expression: combined
---
width=80:
│    ›  日本語テキスト                                                              # [bg=#212337]=   [bg=#212337]=  [fg=#e0e0e0 bg=#212337]=› [bg=#212337]=   [fg=#ebfafa bg=#212337]=日本語テキスト [bg=#212337]=                                                           [bg=#212337]=  
width=40:
│    ›  日本語テキスト                      # [bg=#212337]=   [bg=#212337]=  [fg=#e0e0e0 bg=#212337]=› [bg=#212337]=   [fg=#ebfafa bg=#212337]=日本語テキスト [bg=#212337]=                   [bg=#212337]=
