src/renderer/snapshots/thndrs__renderer__live__tests__prompt_zwj_emoji.snap
---
source: src/renderer/live.rs
expression: combined
---
width=80:
│    ›  👨‍👩‍👧                                                                          # [bg=#212337]=   [bg=#212337]=  [fg=#e0e0e0 bg=#212337]=› [bg=#212337]=   [fg=#ebfafa bg=#212337]=👨‍👩‍👧 [bg=#212337]=                                                                       [bg=#212337]=  
width=40:
│    ›  👨‍👩‍👧                                  # [bg=#212337]=   [bg=#212337]=  [fg=#e0e0e0 bg=#212337]=› [bg=#212337]=   [fg=#ebfafa bg=#212337]=👨‍👩‍👧 [bg=#212337]=                               [bg=#212337]=
